--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>sito web personale di Alex Matei</title>
 </head>
-<body><h2 style="text-align: center;">This is Ales's first personal web site</h2>
+<body>
+    <header>
+        <h1 style="text-align: center;">Il mio sito</h1>
+ <p>ciao a tutti questo è il mio primo sito web e benvenuti</p>
+
+
+
+    </header>
+    
+
     
 </body>
 </html>
