--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sito web personale di Alex Matei</title>
 </head>
-<body>
+<body style="background-color: green;">
     <header>
         <h1 style="text-align: center;">Il mio sito</h1>
- <p>ciao a tutti questo è il mio primo sito web e benvenuti</p>
-
-
-
-    </header>
-    
-
-    
+ <p style="text-align: center;font-size: larger;">ciao a tutti questo è il mio primo sito web e benvenuti</p>
+   </header>
+    <main>
+<p style="text-align: center;">Oggi ho creato il mio primo sito</p>
+   </main>
+<section>
+  <p style="text-align: right;">La mia prima pagina web</p>
+</section>
+ <footer>
+<p>questo è il piè di pagina</p>
+<img src="immagini/images.png" alt="250">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ullam voluptatem reiciendis, illum adipisci tempora nulla libero non similique quaerat. Ducimus omnis et dicta temporibus, sed aliquid quam quidem nulla?</p>
+ </footer>   
 </body>
 </html>
