--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </section>
  <footer>
 <p>questo è il piè di pagina</p>
-<img src="immagini/images.png" alt="250">
+<img src="images.png" alt="250">
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ullam voluptatem reiciendis, illum adipisci tempora nulla libero non similique quaerat. Ducimus omnis et dicta temporibus, sed aliquid quam quidem nulla?</p>
  </footer>   
 </body>
